--- a/example/package.json
+++ b/example/package.json
@@ -1,15 +1,31 @@
 {
-  "name": "example",
-  "version": "1.0.0",
-  "description": "Example for s3 post upload",
-  "main": "index.js",
+  "name": "uploader",
+  "version": "0.1.0",
+  "private": true,
   "author": "Zdenko Nevrala",
-  "license": "MIT",
-  "private": false,
   "dependencies": {
     "aws-sdk": "^2.373.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0"
-  }
+    "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "react-scripts": "2.1.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
