Add material design.

--- a/example/package.json
+++ b/example/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "author": "Zdenko Nevrala",
   "dependencies": {
+    "@material-ui/core": "^3.6.1",
+    "@material-ui/icons": "^3.0.1",
     "aws-sdk": "^2.373.0",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
