--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-s3-post-uploader",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "React component that handle uploading to S3 bucket via POST.",
   "main": "index.js",
   "author": "Zdenko Nevrala",
@@ -12,13 +12,32 @@
     "xml-js": "^1.6.8"
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-flow": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-flowtype": "^3.2.0",
+    "eslint-plugin-flowtype-errors": "^3.6.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "flow-bin": "^0.87.0",
-    "flow-remove-types": "^1.2.3"
+    "flow-copy-source": "^2.0.2",
+    "flow-remove-types": "^1.2.3",
+    "prettier": "^1.15.3"
   },
   "scripts": {
-    "build-lib": "flow-remove-types src/ -d lib/",
-    "build-example": "flow-remove-types src/ -d example/src/components",
-    "build": "yarn build-lib & yarn build-example",
-    "prepublish": "yarn run build"
+    "clean": "rimraf dist",
+    "lint": "eslint \"src/**/*.js*\"",
+    "copy-to-example": "flow-remove-types src/ -d example/src/components",
+    "flowbuild": "flow-copy-source src dist",
+    "prebuild": "npm run clean && npm run flowbuild && npm run copy-to-example",
+    "build": "babel src -d dist",
+    "flow": "flow check"
   }
 }
