--- a/package.json
+++ b/package.json
@@ -6,6 +6,17 @@
   "author": "Zdenko Nevrala",
   "license": "MIT",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:zdenal/react-s3-post-uploader.git"
+  },
+  "keywords": [
+    "react",
+    "upload",
+    "component",
+    "s3",
+    "bucket"
+  ],
   "dependencies": {
     "lodash": "^4.17.11",
     "react": "^16.6.3",
