Correct README and example.

--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
     "koa2-cors": "^2.0.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-s3-post-uploader": "^0.1.0",
+    "@utrustdev/react-s3-post-uploader": "^0.2.0",
     "react-scripts": "2.1.3"
   },
   "scripts": {
